snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/maven-metadata.xml.sha512
916abcfb5c49b079de8e81350089efc938c16179dc5f3e3eda4d47eb3b56dbb2ef6568835b99fd700d7ed9e94bf1163a7f5de02529a12aa7a34849534deea721